--- a/notebooks/said/test_models.ipynb
+++ b/notebooks/said/test_models.ipynb
@@ -353,6 +353,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a76f1f20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "from torchvision import transforms\n",
+    "from skimage.metrics import structural_similarity as ssim\n",
+    "import numpy as np\n",
+    "from src.utils.models_architecture import EDSR, EDSR\n",
+    "\n",
+    "\n",
+    "# =====================================================\n",
+    "# CONFIGURATION\n",
+    "# =====================================================\n",
+    "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "TEST_DIR = \"data_test\"\n",
+    "HR_DIR = \"data/preprocessed/test/HR\"\n",
+    "BEST_MODEL_PATH = \"MODEL_TEST/best_EDSR.pth\"\n",
+    "\n",
+    "SCALE = 4\n",
+    "TARGET_SIZE = (256, 256)   # ⭐ Taille FIXE → reproductibilité\n",
+    "\n",
+    "to_tensor = transforms.ToTensor()\n",
+    "\n",
+    "# =====================================================\n",
+    "# METRICS\n",
+    "# =====================================================\n",
+    "def compute_psnr(sr, hr):\n",
+    "    mse = torch.mean((sr - hr) ** 2)\n",
+    "    if mse == 0:\n",
+    "        return float(\"inf\")\n",
+    "    return 20 * torch.log10(1.0 / torch.sqrt(mse))\n",
+    "\n",
+    "def compute_ssim(sr, hr):\n",
+    "    sr_np = sr.squeeze().permute(1, 2, 0).cpu().numpy()\n",
+    "    hr_np = hr.squeeze().permute(1, 2, 0).cpu().numpy()\n",
+    "    return ssim(sr_np, hr_np, channel_axis=2, data_range=1.0)\n",
+    "\n",
+    "# =====================================================\n",
+    "# LOAD EDSR MODEL\n",
+    "# =====================================================\n",
+    "model = EDSR().to(DEVICE)\n",
+    "ckpt = torch.load(BEST_MODEL_PATH, map_location=DEVICE)\n",
+    "model.load_state_dict(ckpt[\"model\"])\n",
+    "model.eval()\n",
+    "\n",
+    "print(\"✔ EDSR model loaded successfully\")\n",
+    "\n",
+    "# =====================================================\n",
+    "# LOAD & PROCESS IMAGES\n",
+    "# =====================================================\n",
+    "img_names = sorted(os.listdir(TEST_DIR))\n",
+    "\n",
+    "lr_imgs, sr_imgs, hr_imgs = [], [], []\n",
+    "sr_metrics = []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for name in img_names:\n",
+    "        # -------- Load images --------\n",
+    "        lr_img = Image.open(os.path.join(TEST_DIR, name)).convert(\"RGB\")\n",
+    "        hr_img = Image.open(os.path.join(HR_DIR, name)).convert(\"RGB\")\n",
+    "\n",
+    "        # -------- Resize (reproducible) --------\n",
+    "        lr_up = lr_img.resize(TARGET_SIZE, Image.BICUBIC)\n",
+    "        hr_img = hr_img.resize(TARGET_SIZE, Image.BICUBIC)\n",
+    "\n",
+    "        lr = to_tensor(lr_up).unsqueeze(0).to(DEVICE)\n",
+    "        hr = to_tensor(hr_img).unsqueeze(0).to(DEVICE)\n",
+    "\n",
+    "        # -------- EDSR inference --------\n",
+    "        sr = torch.clamp(model(lr), 0.0, 1.0)\n",
+    "\n",
+    "        # -------- Metrics --------\n",
+    "        psnr_val = compute_psnr(sr, hr).item()\n",
+    "        ssim_val = compute_ssim(sr, hr)\n",
+    "\n",
+    "        # -------- Store --------\n",
+    "        lr_imgs.append(lr_up)\n",
+    "        sr_imgs.append(sr.squeeze().permute(1, 2, 0).cpu())\n",
+    "        hr_imgs.append(hr_img)\n",
+    "        sr_metrics.append((psnr_val, ssim_val))\n",
+    "\n",
+    "# =====================================================\n",
+    "# PLOTTING FUNCTIONS\n",
+    "# =====================================================\n",
+    "def plot_lr(images):\n",
+    "    fig, axes = plt.subplots(len(images), 1, figsize=(4, 12))\n",
+    "    for ax, img in zip(axes, images):\n",
+    "        ax.imshow(img)\n",
+    "        ax.set_title(\"PSNR: +∞ dB | SSIM: 1.000\", fontsize=9)\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "    plt.suptitle(\"LR Images \", fontsize=14, fontweight=\"bold\")\n",
+    "    plt.tight_layout(rect=[0, 0, 1, 0.97])\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_sr(images, metrics):\n",
+    "    fig, axes = plt.subplots(len(images), 1, figsize=(4, 12))\n",
+    "    for ax, img, (p, s) in zip(axes, images, metrics):\n",
+    "        ax.imshow(img)\n",
+    "        ax.set_title(f\"PSNR: {p:.2f} dB | SSIM: {s:.3f}\", fontsize=9)\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "    plt.suptitle(\"SR EDSR\", fontsize=14, fontweight=\"bold\")\n",
+    "    plt.tight_layout(rect=[0, 0, 1, 0.97])\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_hr(images):\n",
+    "    fig, axes = plt.subplots(len(images), 1, figsize=(4, 12))\n",
+    "    for ax, img in zip(axes, images):\n",
+    "        ax.imshow(img)\n",
+    "        ax.set_title(\"PSNR: +∞ dB | SSIM: 1.000\", fontsize=9)\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "    plt.suptitle(\"HR Images\", fontsize=14, fontweight=\"bold\")\n",
+    "    plt.tight_layout(rect=[0, 0, 1, 0.97])\n",
+    "    plt.show()\n",
+    "\n",
+    "# =====================================================\n",
+    "# DISPLAY RESULTS\n",
+    "# =====================================================\n",
+    "plot_lr(lr_imgs)\n",
+    "plot_sr(sr_imgs, sr_metrics)\n",
+    "plot_hr(hr_imgs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "bb040111",
    "metadata": {},
