--- a/notebooks/said/EDSR.ipynb
+++ b/notebooks/said/EDSR.ipynb
@@ -7,15 +7,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "device : cuda\n",
-      "\n",
-      " DATA LOADED:\n",
-      "  Train: 152352 samples\n",
-      "  Val:   19044 samples\n",
-      "  Test:  19044 samples\n"
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 29) (__init__.py, line 29)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/BDAI2/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3579\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[1;32mIn[1], line 6\u001b[0m\n    import torch\u001b[0m\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/BDAI2/lib/python3.10/site-packages/torch/__init__.py:1706\u001b[0m\n    from torch import storage as storage  # usort: skip\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/miniconda3/envs/BDAI2/lib/python3.10/site-packages/torch/storage.py:23\u001b[0;36m\n\u001b[0;31m    import numpy as np\u001b[0;36m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/miniconda3/envs/BDAI2/lib/python3.10/site-packages/numpy/__init__.py:29\u001b[0;36m\u001b[0m\n\u001b[0;31m    Use the built-in ``help`` function to view a function's docstring::\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 29)\n"
      ]
     }
    ],
@@ -44,17 +45,16 @@
     "\n",
     "# CONFIG FROM YAML \n",
     "data_root      = CONFIG[\"paths\"][\"output_root\"]\n",
-    "batch_size     = 32 #CONFIG[\"training\"][\"batch_size\"]\n",
+    "batch_size     = CONFIG[\"training\"][\"batch_size\"]\n",
     "num_workers    = CONFIG[\"training\"][\"num_workers\"]\n",
     "use_aug        = CONFIG[\"training\"].get(\"use_augmentation\", True)\n",
     "\n",
     "# HYPERPARAMS FROM CONFIG \n",
     "lr              = CONFIG[\"training\"][\"lr\"]\n",
     "weight_decay    = CONFIG[\"training\"][\"weight_decay\"]\n",
-    "num_epochs      = 0 #CONFIG[\"training\"][\"epochs\"]\n",
+    "num_epochs      = CONFIG[\"training\"][\"epochs\"]\n",
     "step_size       = CONFIG[\"training\"][\"scheduler_step_size\"]\n",
     "gamma           = CONFIG[\"training\"][\"scheduler_gamma\"]\n",
-    "\n",
     "\n",
     "best_model_path = CONFIG[\"model\"][\"best_EDSR_path\"]\n",
     "last_model_path = CONFIG[\"model\"][\"last_EDSR_path\"]\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a7a9e373",
    "metadata": {},
    "outputs": [
