--- a/notebooks/said/MSFSSR_L1_training.ipynb
+++ b/notebooks/said/MSFSSR_L1_training.ipynb
@@ -75,16 +75,10 @@
     "optimizer = optim.Adam(model_large.parameters(), lr=lr, betas=(0.9, 0.999), weight_decay=weight_decay)\n",
     "scheduler = optim.lr_scheduler.MultiStepLR(optimizer, milestones=[15, 30, 45], gamma=0.5)\n",
     "\n",
-    "best_model_path = CONFIG[\"model\"][\"best_custom_large_path\"]\n",
-    "last_model_path = CONFIG[\"model\"][\"last_custom_large_path\"]\n",
-    "history_path = CONFIG[\"history\"][\"custom_large_history_path\"]"
+    "best_model_path = CONFIG[\"model\"][\"best_MSFSSR_L1_path\"]\n",
+    "last_model_path = CONFIG[\"model\"][\"last_MSFSSR_L1_path\"]\n",
+    "history_path = CONFIG[\"history\"][\"MSFSSR_L1_history_path\"]"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3202ac9",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -125,7 +119,7 @@
    "source": [
     "train_model_sr(\n",
     "    model=model_large,\n",
-    "    model_name=\"custom_model_large_finetuned\",\n",
+    "    model_name=\"MSFSSR_L1_finetuned\",\n",
     "    train_loader=train_loader,\n",
     "    val_loader=val_loader,\n",
     "    device=device,\n",
