--- a/notebooks/yasser/MSFSSR_custom_training.ipynb
+++ b/notebooks/yasser/MSFSSR_custom_training.ipynb
@@ -77,9 +77,9 @@
     "optimizer = optim.Adam(model_large.parameters(), lr=lr, betas=(0.9, 0.999), weight_decay=weight_decay)\n",
     "scheduler = optim.lr_scheduler.MultiStepLR(optimizer, milestones=[15, 30, 45], gamma=0.5)\n",
     "\n",
-    "best_model_path = CONFIG[\"model\"][\"best_custom_large2_path\"]\n",
-    "last_model_path = CONFIG[\"model\"][\"last_custom_large2_path\"]\n",
-    "history_path = CONFIG[\"history\"][\"custom_large2_history_path\"]"
+    "best_model_path = CONFIG[\"model\"][\"best_MSFSSR_CUSTOM_path\"]\n",
+    "last_model_path = CONFIG[\"model\"][\"last_MSFSSR_CUSTOM_path\"]\n",
+    "history_path = CONFIG[\"history\"][\"MSFSSR_CUSTOM_history_path\"]"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "source": [
     "train_model_sr(\n",
     "    model=model_large,\n",
-    "    model_name=\"custom_model_large\",\n",
+    "    model_name=\"MSFSSR_CUSTOM_large\",\n",
     "    train_loader=train_loader,\n",
     "    val_loader=val_loader,\n",
     "    device=device,\n",
